2004-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-tabmenu.el (w3m-tab-menubar-update): Don't let iswitchb
	manage the w3m tab menubar.

2004-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-break-long-japanese-lines): New function.
	* shimbun/sb-mainichi.el (shimbun-mainichi-prepare-article): Use it.
	* shimbun/sb-wired.el (shimbun-make-contents): Use it.

2004-10-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-check-refresh-attribute): Support own page reload.
	(w3m-goto-url-with-timer): Ditto.

2004-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_ADD_LOAD_PATH): Clarify the error message.

2004-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (call-process-region): Add an advice in order to fix
	an XEmacs 21.5.18 bug.
	* w3mhack.el (call-process-region): Ditto.

	* shimbun/sb-bbc.el (shimbun-rss-build-message-id): Prevent
	fetching of headers stopping with extra articles.

2004-10-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-check-refresh-attribute): Fix to analyze the URL.

2004-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-wired.el (shimbun-wired-from-address): Make it
	uneachable.
	(shimbun-wired-x-face-alist): Replace it with a new face.
	(shimbun-get-group-header-alist): Improve the uniqueness of
	Message-IDs; change the From header appearance.

2004-10-21  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-wired.el (shimbun-wired-url): Update it so that it
	may fit to the new configuration of the Hotwired Japan.
	(shimbun-wired-content-start): Ditto.
	(shimbun-get-group-header-alist): Ditto.

2004-10-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-buffer-setup): Modify
	`mode-line-buffer-identification'; display "Loading..." instead of
	`w3m-current-titile' when process of w3m active.

2004-10-10  Andreas Seltenreich  <seltenreich@gmx.de>

	* shimbun/sb-laut-de.el: New file.

2004-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>
