@@ -1,5 +1,9 @@
 2004-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* w3m-form.el (w3m-char-to-int, w3m-string-to-char-list,
+	w3m-int-to-char): Silence byte-compiler.
+	* w3m-ccl.el (charset-id): Ditto.
+
 	* w3m-tabmenu.el (w3m-tab-menubar-update): Don't let iswitchb
 	manage the w3m tab menubar.
 
